--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
     <style>
-        body {
+        body, html {
             margin: 0;
-            height: 100vh;
-            background: url('wotdatbird.png') no-repeat center center fixed; 
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
+        }
+        img {
+            min-width: 105vw;
+            min-height: 105vh;
         }
     </style>
 </head>
 <body>
-</body>
-</html>
+    <img src="wotdatbird.png">
+</body></html>
