--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <style>
         body, html {
             margin: 0;
+            background-color: rgb(1 20 128);
         }
         img {
             min-width: 105vw;
