Add favicon and manifest

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<html><head>
+<html>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Wot Dat Bird</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <style>
-        body, html {
+        body,
+        html {
             margin: 0;
             background-color: rgb(1 20 128);
         }
+
         img {
             min-width: 105vw;
             min-height: 105vh;
         }
     </style>
 </head>
+
 <body>
     <img src="wotdatbird.png">
-</body></html>
+</body>
+
+</html>
