Add service worker

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             min-height: 105vh;
         }
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register("serviceworker.js");
+        }
+    </script>
 </head>
 
 <body>
